More updates modified

--- a/contact.html
+++ b/contact.html
@@ -461,7 +461,7 @@ Email: info@intlcargoshipping.com</span>
 
 						                    <div class="footer-contact__title">ICS &amp; Transport</div>
 
-						                    <div class="footer-contact__info">4 Great Central Way, London NW10 0UX, United Kingdom</div>
+						                    <div class="footer-contact__info">33 Rutherford Street Newark, NJ 07105</div>
 
 						                    <div class="footer-contact__info">Phone: +1 605 219 9356</div>
 
