--- a/faqs.html
+++ b/faqs.html
@@ -552,7 +552,7 @@ Note: The more specific and unique your reference number is, the quicker it will
 
 						                    <div class="footer-contact__title">ICS &amp; Transport</div>
 
-						                    <div class="footer-contact__info">4 Great Central Way, London NW10 0UX, United Kingdom</div>
+						                    <div class="footer-contact__info">33 Rutherford Street Newark, NJ 07105</div>
 
 						                    <div class="footer-contact__info">Phone: +1 605 219 9356</div>
 
