--- a/index.html
+++ b/index.html
@@ -1894,32 +1894,7 @@
 
 
 
-			<div class="section-default section-bg_mod-c wow">
-
-				<div class="container">
-
-					<div class="row">
-
-						<div class="col-xs-12">
-
-							<div class="block-contacts">
-
-								<div class="block-contacts__title-1">call us now on</div>
-
-								<div class="block-contacts__title-2"><i class="icon flaticon-telephone114"></i><span class="color-primary">+1 605 219 9356</span></div>
-
-								<div class="block-contacts__title-3"></div>
-
-							</div>
-
-						</div><!-- end col -->
-
-					</div><!-- end row -->
-
-				</div><!-- end container -->
-
-			</div><!-- end section-default -->
-
+			
 
 
 
@@ -2112,7 +2087,7 @@
 
 																<div class="footer-contact__title">ICS &amp; Transport</div>
 
-																<div class="footer-contact__info">4 Great Central Way, London NW10 0UX, United Kingdom</div>
+																<div class="footer-contact__info">33 Rutherford Street Newark, NJ 07105</div>
 
 																<div class="footer-contact__info">Phone: +1 605 219 9356</div>
 
@@ -2122,7 +2097,7 @@
 
 																	<option>Select a branch</option>
 
-																	<option>4 Great Central Way, London NW10 0UX, United Kingdom</option>
+																	<option>33 Rutherford Street Newark, NJ 07105</option>
 
 																</select>
 
