--- a/index.html
+++ b/index.html
@@ -1260,19 +1260,19 @@
 
 
 
-								<form class="form-request form-request_mod-a ui-form block_right_pad" action="#" method="post">
+								<form class="form-request form-request_mod-a ui-form block_right_pad" action="https://www.elformo.com/forms/0df7e595-abcd-4de7-b9cc-ddcc157c32fe" method="post">
 
 									<div class="row">
 
 										<div class="col-xs-12">
 
-											<input class="form-control" type="text" placeholder="Full Name">
+											<input class="form-control" type="text" name="name" placeholder="Full Name">
 
 										</div>
 
 										<div class="col-xs-12">
 
-											<input class="form-control" type="email" placeholder="Email address">
+											<input class="form-control" type="email" name="email" placeholder="Email address">
 
 										</div>
 
@@ -1284,45 +1284,13 @@
 
 										<div class="col-sm-6">
 
-											<div class="select-control">
-
-												<select class="selectpicker">
-
-													<option>Destination From....</option>
-
-													<option>Europe</option>
-
-													<option>America</option>
-
-                                                    <option>Asia</option>
-
-                                                    <option>Africa</option>
-
-												</select>
-
-											</div>
+											<input type="text" name="pickupfrom" placeholder="Pickup Location">
 
 										</div>
 
 										<div class="col-sm-6">
 
-											<div class="select-control">
-
-												<select class="selectpicker">
-
-													<option>Destinatin To....</option>
-
-													<option>Europe</option>
-
-													<option>America</option>
-
-                                                    <option>Asia</option>
-
-                                                    <option>Africa</option>
-
-												</select>
-
-											</div>
+											<input type="text" name="pickupto" placeholder="Destination">
 
 										</div>
 
@@ -1334,32 +1302,29 @@
 
 										<div class="col-sm-6">
 
-											<div class="select-control">
-
-												<select class="selectpicker">
-
-													<option>Logistics Type</option>
-
-													<option>Road and Rail Freight Services</option>
-
-													<option>Ocean Freight Services</option>
-
-                                                    <option>Air Freight Services</option>
-
-												</select>
-
-											</div>
+											<input type="text" name="weight" placeholder="Weight">
 
 										</div>
 
 										<div class="col-sm-6">
 
-											<input class="form-control" type="email" placeholder="Subject">
+											<input class="form-control" type="email" name="dimensions" placeholder="Dimensions">
 
 										</div>
 
 									</div>
 
+									<div class="row">
+										
+
+										<div class="col-sm-12">
+											
+											<textarea name="message" class="form-control"></textarea>
+
+										</div>
+
+
+									</div>
 
 
 									<div class="row">
