--- a/index.html
+++ b/index.html
@@ -1284,13 +1284,13 @@
 
 										<div class="col-sm-6">
 
-											<input type="text" name="pickupfrom" placeholder="Pickup Location">
+											<input class="form-control" type="text" name="pickupfrom" placeholder="Pickup Location">
 
 										</div>
 
 										<div class="col-sm-6">
 
-											<input type="text" name="pickupto" placeholder="Destination">
+											<input class="form-control" type="text" name="pickupto" placeholder="Destination">
 
 										</div>
 
@@ -1302,7 +1302,7 @@
 
 										<div class="col-sm-6">
 
-											<input type="text" name="weight" placeholder="Weight">
+											<input class="form-control" type="text" name="weight" placeholder="Weight">
 
 										</div>
 
@@ -1314,17 +1314,6 @@
 
 									</div>
 
-									<div class="row">
-										
-
-										<div class="col-sm-12">
-											
-											<textarea name="message" class="form-control"></textarea>
-
-										</div>
-
-
-									</div>
 
 
 									<div class="row">
