--- a/contact.html
+++ b/contact.html
@@ -93,7 +93,7 @@
 
 						            <li><a href="tracking.html">Tracking Number</a></li>
 
-						            <li><a href="careers.html">Careers</a></li>
+						            <li><a href="quote.html">Request a Quote</a></li>
 
 						            <li><a href="contact.html">Contact us</a></li>
 
