--- a/faqs.html
+++ b/faqs.html
@@ -112,7 +112,7 @@ type="text/javascript";e.parentNode.insertBefore($,e)})(document,"script");
 
 						            <li><a href="tracking.html">Tracking Number</a></li>
 
-						            <li><a href="careers.html">Careers</a></li>
+						            <li><a href="quote.html">Request a Quote</a></li>
 
 						            <li><a href="contact.html">Contact us</a></li>
 
