--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
 												<li><a href="tracking.html">Tracking Number</a></li>
 
-												<li><a href="careers.html">Careers</a></li>
+												<li><a href="quote.html">Request a Quote</a></li>
 
 												<li><a href="contact.html">Contact us</a></li>
 
