Contact forms added

--- a/index.html
+++ b/index.html
@@ -1260,8 +1260,9 @@
 
 
 
-								<form class="form-request form-request_mod-a ui-form block_right_pad" action="https://www.elformo.com/forms/0df7e595-abcd-4de7-b9cc-ddcc157c32fe" method="post">
-
+								<form action="https://getsimpleform.com/messages?form_api_token=ccf89626838b9e4bf766d4865de530d8" method="post">
+  <!-- the redirect_to is optional, the form will redirect to the referrer on submission -->
+  <input type='hidden' name='redirect_to' value='https://intlcargoshipping.com/thank-you.html' />
 									<div class="row">
 
 										<div class="col-xs-12">
@@ -1308,7 +1309,7 @@
 
 										<div class="col-sm-6">
 
-											<input class="form-control" type="email" name="dimensions" placeholder="Dimensions">
+											<input class="form-control" type="text" name="dimensions" placeholder="Dimensions">
 
 										</div>
 
