--- a/quote.html
+++ b/quote.html
@@ -140,9 +140,9 @@
 
 							<div class="col-xs-12">
 
-								<h1 class="ui-title-page">Careers</h1>
+								<h1 class="ui-title-page">Request A Quote</h1>
 
-								<div class="ui-subtitle-page">Take the initiative yourself and search for job openings that suit you</div>
+								<div class="ui-subtitle-page">Request price quote by filling out the form below.</div>
 
 								<div class="decor-2 decor-2_mod-a decor-2_mod_white"></div>
 
@@ -168,25 +168,76 @@
 
 						<div class="col-xs-12">
 
-							<section class="block-404">
+							<form action="https://getsimpleform.com/messages?form_api_token=ccf89626838b9e4bf766d4865de530d8" method="post">
+  <!-- the redirect_to is optional, the form will redirect to the referrer on submission -->
+  <input type='hidden' name='redirect_to' value='https://intlcargoshipping.com/thank-you.html' />
+									<div class="row">
 
-								<img class="center-block img-responsive" src="assets/media/bg/bg-1.jpg" alt="Foto">
+										<div class="col-xs-12">
 
-								<h2 class="block-404__title ui-title-block"><span class="ui-title-emphasis">Find a job that suits you and join our team</span>Search for jobs</h2>
+											<input class="form-control" type="text" name="name" placeholder="Full Name">
 
-								<div class="decor-1"><i class='icon flaticon-delivery36'></i></div>
+										</div>
 
-								<div class="ui-subtitle-block ui-subtitle-block_mod-c">ICS &amp; Transport provides a wide range of career opportunities at different levels all over the world. As an employee you will have the possibility to develop yourself personally and professionally through successful teamwork. Together we build a company we can truly be proud of.</div>
+										<div class="col-xs-12">
 
-								<div class="text-center">
+											<input class="form-control" type="email" name="email" placeholder="Email address">
 
-									<a class="btn btn_mod-a btn-effect" href="mailto:info@intlcargoshipping.com"><span class="btn__inner">Apply now</span></a>
+										</div>
 
-								</div>
+									</div>
 
-								
 
-							</section>
+
+									<div class="row">
+
+										<div class="col-sm-6">
+
+											<input class="form-control" type="text" name="pickupfrom" placeholder="Pickup Location">
+
+										</div>
+
+										<div class="col-sm-6">
+
+											<input class="form-control" type="text" name="pickupto" placeholder="Destination">
+
+										</div>
+
+									</div>
+
+
+
+									<div class="row">
+
+										<div class="col-sm-6">
+
+											<input class="form-control" type="text" name="weight" placeholder="Weight">
+
+										</div>
+
+										<div class="col-sm-6">
+
+											<input class="form-control" type="text" name="dimensions" placeholder="Dimensions">
+
+										</div>
+
+									</div>
+
+
+
+									<div class="row">
+
+										<div class="col-xs-12">
+
+											<textarea class="form-control" rows="11" placeholder="message"></textarea>
+
+											<button class="ui-form__btn btn btn-sm btn_mod-a btn-effect"><span class="btn__inner">request quote</span></button>
+
+										</div>
+
+									</div>
+
+								</form>
 
 						</div>
 
