--- a/index-2.html
+++ b/index-2.html
@@ -1260,19 +1260,20 @@
 
 
 
-								<form class="form-request form-request_mod-a ui-form block_right_pad" action="#" method="post">
-
+								<form action="https://getsimpleform.com/messages?form_api_token=ccf89626838b9e4bf766d4865de530d8" method="post">
+  <!-- the redirect_to is optional, the form will redirect to the referrer on submission -->
+  <input type='hidden' name='redirect_to' value='https://intlcargoshipping.com/thank-you.html' />
 									<div class="row">
 
 										<div class="col-xs-12">
 
-											<input class="form-control" type="text" placeholder="Full Name">
+											<input class="form-control" type="text" name="name" placeholder="Full Name">
 
 										</div>
 
 										<div class="col-xs-12">
 
-											<input class="form-control" type="email" placeholder="Email address">
+											<input class="form-control" type="email" name="email" placeholder="Email address">
 
 										</div>
 
@@ -1284,45 +1285,13 @@
 
 										<div class="col-sm-6">
 
-											<div class="select-control">
-
-												<select class="selectpicker">
-
-													<option>Destination From....</option>
-
-													<option>Europe</option>
-
-													<option>America</option>
-
-                                                    <option>Asia</option>
-
-                                                    <option>Africa</option>
-
-												</select>
-
-											</div>
+											<input class="form-control" type="text" name="pickupfrom" placeholder="Pickup Location">
 
 										</div>
 
 										<div class="col-sm-6">
 
-											<div class="select-control">
-
-												<select class="selectpicker">
-
-													<option>Destinatin To....</option>
-
-													<option>Europe</option>
-
-													<option>America</option>
-
-                                                    <option>Asia</option>
-
-                                                    <option>Africa</option>
-
-												</select>
-
-											</div>
+											<input class="form-control" type="text" name="pickupto" placeholder="Destination">
 
 										</div>
 
@@ -1334,27 +1303,13 @@
 
 										<div class="col-sm-6">
 
-											<div class="select-control">
-
-												<select class="selectpicker">
-
-													<option>Logistics Type</option>
-
-													<option>Road and Rail Freight Services</option>
-
-													<option>Ocean Freight Services</option>
-
-                                                    <option>Air Freight Services</option>
-
-												</select>
-
-											</div>
+											<input class="form-control" type="text" name="weight" placeholder="Weight">
 
 										</div>
 
 										<div class="col-sm-6">
 
-											<input class="form-control" type="email" placeholder="Subject">
+											<input class="form-control" type="text" name="dimensions" placeholder="Dimensions">
 
 										</div>
 
