Newark added and modified

--- a/contact.html
+++ b/contact.html
@@ -213,7 +213,7 @@
 
 									<i class="icon flaticon-location74"></i>
 
-									<span class="contacts-block__inner"><p><b>United States of America</b></p>108 w chestnut St, Junction City, 66441, Kansas. United States of America <br>Phone: +1 856 223 7028</br> 
+									<span class="contacts-block__inner"><p><b>United States of America</b></p>33 Rutherford Street<br> Newark, NJ 07105 <br>United States of America <br><br>	Phone: +1 856 223 7028</br> 
 
 Email: info@intlcargoshipping.com</span>
 
