--- a/tracking.html
+++ b/tracking.html
@@ -87,7 +87,7 @@
 
 						            <li><a href="index-2.html">Home</a></li>
 
-						            <li><a href="about.html">About us & Services</a></li>
+						            <li><a href="about.html">About us &amp; Services</a></li>
 
 						            <li><a href="faqs.html">FAQs</a></li>
 
