--- a/about.html
+++ b/about.html
@@ -187,7 +187,7 @@
 
 								<h5><strong>ICS &amp; Transport provide standard domestic and international Shipping, pick-up, delivery and return solutions for business customers and consumers.</strong></h5>
 
-								<p>Backed by our strong group network and experience, Norden Logistics Ltd and Norden Transport Solutions Ltd eCommerce offer a full range of cross-border shipping services covering more than 220 countries across the globe.</p>
+								<p>Backed by our strong group network and experience, ICS &amp; Transport offer a full range of cross-border shipping services covering more than 220 countries across the globe.</p>
 
 								<p>&nbsp;</p>
 
